# webrtc-socket

./: README.md  index.js
native/: Cargo.toml
native/src/: lib.rs  main.rs
socket/: Cargo.toml  Dockerfile  README.md
socket/src/: main.rs
