[package]
name = "webrtc_socket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webrtc = { git = "https://github.com/webrtc-rs/webrtc", branch = "master" }
tokio = { version = "1.15.0", features = ["full"] }
env_logger = "0.9.0"
clap = "3.0.8"
tokio-util = "0.6.9"
anyhow = "1.0.52"
chrono = "0.4.19"
log = "0.4.14"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"
bytes = "1.1.0"
futures = "0.3.21"

tungstenite = { version = "0.10.0" }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"]}
